tests/errors/e_tstring_unclosed3.pyx
# mode: error

t''''

_ERRORS = """
3:0: Unclosed string literal
# Message could be better
5:0: Unexpected token None:'' in t-string literal
"""
